buildscript {
  repositories {
      mavenLocal()
      mavenCentral()
  }
}

plugins {
  id 'com.github.ben-manes.versions' version '0.15.0' //dependencyUpdates
}


tasks.withType(JavaCompile) {
   options.incremental = true // one flag, and things will get MUCH faster
}



allprojects {
    apply plugin: 'maven'
    apply plugin: 'idea'
    group = 'narchy'
    version = '1.0'

//    apply plugin: 'nebula.lint'
//    gradleLint.rules = ['all-dependency'] // add as many rules here as you'd like
}



subprojects {
    apply plugin: 'java'
    sourceCompatibility = 1.9
    targetCompatibility = 1.9
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }


    repositories {
        mavenLocal()

        maven { url "http://repo.maven.apache.org/maven2" }
        maven { url "https://jcenter.bintray.com" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
    }


}
